src/tests/snapshots/gitu__tests__apply__apply_hunk.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   file.txt                                                            |
 @@ -1 +1 @@                                                                    |
 -bad text                                                                      |
 +good text                                                                     |
                                                                                |
 Recent commits                                                                 |
 _______ main add file.txt                                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 574feec175830382
